# itlib

./: .travis.yml  CMakeLists.txt  CMakePresets.json  LICENSE.txt  README.md  VSOpenFileFromDirFilters.json  appveyor.yml  dev.cmake  itlib-config-version.in.cmake  itlib-config.in.cmake
.github/workflows/: build.yml  coverage.yml
.gitub/workflows/: ci.yml
include/: CMakeLists.txt
include/chobo/: flat_map.hpp  memory_view.hpp  optional.hpp  small_vector.hpp  static_vector.hpp  vector.hpp  vector_ptr.hpp  vector_view.hpp
include/itlib/: any.hpp  atomic.hpp  atomic_shared_ptr_storage.hpp  data_mutex.hpp  dynamic_bitset.hpp  expected.hpp  flat_map.hpp  flat_set.hpp  generator.hpp  make_ptr.hpp  mem_streambuf.hpp  memory_view.hpp  mutex.hpp  opt_ref_buffer.hpp  pmr_allocator.hpp  pod_vector.hpp  poly_span.hpp  qalgorithm.hpp  rand_dist.hpp  ref_ptr.hpp  rstream.hpp  sentry.hpp  shared_from.hpp  small_vector.hpp  span.hpp  static_vector.hpp  stride_span.hpp  strutil.hpp  tep_vector.hpp  throw_ex.hpp  time_t.hpp  transparent_umap.hpp  type_traits.hpp  ufunction.hpp  utility.hpp
test/: .gitignore  CMakeLists.txt  README.md  b-rand_dist.cpp  bft-pod_vector-pod.cpp  bft-small_vector-revert-cap-mismatch.cpp  bft-utility-force_move.cpp  doctest.hpp  doctest_main.cpp  gen_vs14_x64.bat  get_cpm.cmake  t-any-11.cpp  t-any-17.cpp  t-atomic-11.cpp  t-atomic_shared_ptr_storage-11.cpp  t-atomic_shared_ptr_storage-20.cpp  t-atomic_shared_ptr_storage.inl  t-data_mutex-11.cpp  t-data_mutex-17.cpp  t-dynamic_bitset-11.cpp  t-expected-11.cpp  t-flat_map-11.cpp  t-flat_map-17.cpp  t-flat_map.cpp  t-flat_set-11.cpp  t-generator-20.cpp  t-itlib-11.cpp  t-itlib-14.cpp  t-itlib-17.cpp  t-itlib-20.cpp  t-make_ptr-11.cpp  t-mem_streambuf-11.cpp  t-memory_view-11.cpp  t-mutex-11.cpp  t-opt_ref_buffer-20.cpp  t-pmr_allocator-17.cpp  t-pmr_allocator-20.cpp  t-pod_vector-11.cpp  t-poly_span-11.cpp  t-qalgorithm-11.cpp  (+28 more)
test/doctest/: doctest.cpp
tools/vs/: chobo_static_vector.natvis  itlib-expected.natvis  itlib-memory_view.natvis  itlib-pod_vector.natvis  itlib-small_vector.natvis  itlib-span.natvis  itlib-static_vector.natvis  itlib_static_vector.natvis
